# OS-Assignments

OS_A2/: CMakeLists.txt  Makefile
OS_A2/Atom-Storage/: AtomClient.cpp  AtomClient.gcno  AtomStorageServer.cpp  AtomStorageServer.gcda  AtomStorageServer.gcno  Makefile  Molecule.gcno  MoleculeFactory.cpp  MoleculeFactory.gcno  client  server
OS_A2/Atom-Storage/Coverage/: AtomClient.cpp.gcov  AtomStorageServer.cpp.gcov  Molecule.cpp.gcov  MoleculeFactory.cpp.gcov
OS_A2/Atom-Storage/tests/: client1_input.txt  client2_input.txt  server_input.txt
OS_A2/Q0/: Makefile  PhoneBook.txt  add2PB  add2PB.c  add2PB.gcno  findPhone  findPhone.c  findPhone.gcda  findPhone.gcno
OS_A2/Q0/Coverage/: add2PB.c.gcov  findPhone.c.gcov
OS_A3/: CMakeLists.txt  Makefile
OS_A3/Q0/: AtomClient.cpp  AtomStorageServer.cpp  ClientAPI.cpp  ClientAPI.hpp  Makefile  Molecule.cpp  UDSClient.cpp  client  server  uds_client
OS_A3/Q1/: ConvexHull.cpp  ConvexHull.hpp  Main.cpp  Makefile  MonotoneChain.cpp  convex  test
OS_A3/Q1/inputs/: input_stage1.txt
OS_A3/Q10/: Reactor.cpp  Server.cpp  async_handling.hpp  server
OS_A3/Q2/: GrahamScan.cpp  Main.cpp  Makefile  Point.cpp  Test.cpp  convex  gmon.out.convex
OS_A3/Q2/Q2_profiling_result/: README.txt  analysis.txt
OS_A3/Q3/: ConvexHull.hpp  Main.cpp  Makefile  convex
OS_A3/Q4/: ConvexHull.cpp  Makefile  Server.cpp  server
OS_A3/Q5-6/: Makefile  Reactor.cpp  Reactor.hpp  Server.cpp  server
OS_A3/Q7/: Makefile  Server.cpp  server
OS_A3/Q8-9/: Makefile  Point.hpp  Proactor.cpp  Server.cpp  server
OS_A4/: CMakeLists.txt
OS_A4/part1/Q1-4/: Graph.cpp  Graph.cpp.gcov  Graph.gcda  Graph.gcno  Graph.hpp  Graph.hpp.gcov  Main.cpp  Main.cpp.gcov  Main.gcda  Main.gcno  Makefile  euler
OS_A4/part1/Q5-6/: Makefile  answer.md  hello.c  main
OS_A4/part1/Q7/: Makefile  answer.md  helgrind_log.txt  main  race.c  valgrind_log.txt
OS_A4/part2/Q1/: Makefile  main.cpp  singleton.hpp
OS_A4/part2/Q2/: guard.hpp  main  main.cpp
OS_FINAL/: CMakeLists.txt
OS_FINAL/coverage_report/: index-sort-f.html  index-sort-l.html  index.html
OS_FINAL/coverage_report/OS_FINAL/: index-sort-f.html  index-sort-l.html  index.html  main.cpp.func-sort-c.html  main.cpp.func.html  main.cpp.gcov.html
OS_FINAL/coverage_report/tests/: index-sort-f.html  index-sort-l.html  index.html  test_data_structures.cpp.func-sort-c.html  test_data_structures.cpp.func.html  test_data_structures.cpp.gcov.html  test_handlers.cpp.func-sort-c.html  test_handlers.cpp.func.html  test_handlers.cpp.gcov.html  test_main.cpp.func-sort-c.html  test_main.cpp.func.html  test_main.cpp.gcov.html  test_mst_algos.cpp.func-sort-c.html  test_mst_algos.cpp.func.html  (+1 more)
(+173 files in other folders)
